# data-validator

./: .gitignore  README.md  build_exe.ps1  cnds_validator.spec  launch_cnds_validator.py  pyproject.toml  run_app.bat  run_app.ps1  windows_version_info.txt
src/cnds_validator/: __init__.py  ccipr10h.py  ccipr60i.py  exporters.py  gui.py  overrides.py  profiles.py  validator.py
tests/: test_ccipr10h.py  test_ccipr60i.py  test_conversion_scope_regression.py  test_overrides.py  test_record_length_validation.py  test_version_metadata.py
tests/fixtures/: APSR.edit.txt
