[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cnds-validator"
version = "0.2.0"
description = "Windows GUI for validating CNDS fixed-width files and exporting CCIPR60I conversion files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
